--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
-
 <body>
     <div class="container">
         <div class="main">
-            <input type="text" id="input" onkeyup="handleKeyUp(event)" autofocus>
-            <div class="btns" onclick="handleButtonClick(event)">
-                <button value="%">%</button>
-                <button value="CE">CE</button>
-                <button value="C">C</button>
-                <button value="DEL">DEL</button>
-                <button value="7">7</button>
-                <button value="8">8</button>
-                <button value="9">9</button>
-                <button value="/">/</button>
-
-
-                <button value="4">4</button>
-                <button value="5">5</button>
-                <button value="6">6</button>
-                <button value="*">*</button>
-                <button value="1">1</button>
-                <button value="2">2</button>
-                <button value="3">3</button>
-                <button value="+">+</button>
-                <button value=".">.</button>
-                <button value="0">0</button>
-                <button value="equal">=</button>
-                <button value="-">-</button>
+            <input type="text" id="input" autofocus>
+            <div class="btns">
+                <button id="btn-percent" value="%">%</button>
+                <button id="btn-ce" value="CE">CE</button>
+                <button id="btn-c" value="C">C</button>
+                <button id="btn-del" value="DEL">DEL</button>
+                <button class="number-btn" value="7">7</button>
+                <button class="number-btn" value="8">8</button>
+                <button class="number-btn" value="9">9</button>
+                <button class="operator-btn" value="/">/</button>
+                <button class="number-btn" value="4">4</button>
+                <button class="number-btn" value="5">5</button>
+                <button class="number-btn" value="6">6</button>
+                <button class="operator-btn" value="*">*</button>
+                <button class="number-btn" value="1">1</button>
+                <button class="number-btn" value="2">2</button>
+                <button class="number-btn" value="3">3</button>
+                <button class="operator-btn" value="+">+</button>
+                <button class="number-btn" value=".">.</button>
+                <button class="number-btn" value="0">0</button>
+                <button class="operator-btn" value="equal">=</button>
+                <button class="operator-btn" value="-">-</button>
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
